[tool.poetry]
name = "wallhavend"
version = "0.1.0"
description = "Automatically download and use wallpapers from wallhaven.cc"
authors = ["Josh Burns <joshyburnss@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[tool.poetry.scripts]
wallhavend = { callable = "wallhavend.console:run", from="src" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
